# fusihub-web-app

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  tsconfig.options.json  web-backend-server.Dockerfile
.cargo/: config.toml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: node.yml
apps/nextjs-frontend/: moon.yml  next.config.ts  package.json  tsconfig.json
apps/nextjs-frontend-app/: next.config.ts  package-lock.json  package.json  tsconfig.json
apps/nextjs-frontend-server/: content-collections.ts  next.config.ts  package.json  tsconfig.json
apps/nextjs-frontend-server/public/favicon/: site.webmanifest
apps/nextjs-frontend-server/src/: middleware.ts
apps/nextjs-frontend-server/src/app/: layout.tsx  page.tsx  providers.tsx
apps/nextjs-frontend-server/src/app/(main)/: page.tsx
apps/nextjs-frontend-server/src/app/[locale]/: error.tsx  layout.tsx
apps/nextjs-frontend-server/src/components/: blog-post-cards.tsx  go-to-homepage.tsx  image-zoom.tsx  link.tsx  list-blog-posts.tsx  page-title.tsx
apps/nextjs-frontend-server/src/components/home/: about-me.tsx  connect.tsx  favorite-frameworks.tsx  intro.tsx  location-card.tsx
apps/nextjs-frontend-server/src/components/layout/: header.tsx  locale-switcher.tsx  main-layout.tsx  theme-switcher.tsx
apps/nextjs-frontend-server/src/components/mdx/: item-grid.tsx  link-card.tsx  logo.tsx  table.tsx  tree-view.tsx
apps/nextjs-frontend-server/src/config/: links.tsx
apps/nextjs-frontend-server/src/fusihub/i18n/: config.ts
apps/nextjs-frontend-server/src/fusihub/mdx-plugins/: index.ts  utils.ts
apps/nextjs-frontend-server/src/fusihub/ui/: button.tsx  command.tsx  dropdown-menu.tsx  index.ts  kbd.tsx  logo.tsx  separator.tsx  tree-view.tsx
apps/nextjs-frontend-server/src/hooks/: use-click-outside.ts  use-formatted-date.ts
apps/nextjs-frontend-server/src/i18n/: request.ts
apps/nextjs-frontend-server/src/libs/: constants.ts
apps/nextjs-frontend-server/src/utils/: get-localized-path.ts
apps/nextjs-frontend/src/: middleware.ts
apps/nextjs-frontend/src/app/: providers.tsx
apps/nextjs-frontend/src/app/[locale]/: not-found.tsx
apps/nextjs-frontend/src/components/: blog-post-cards.tsx  command-menu.tsx
apps/nextjs-frontend/src/components/home/: favorite-frameworks.tsx  intro.tsx  stacks-card.tsx
apps/nextjs-frontend/src/components/layout/: footer.tsx  header.tsx  mobile-nav.tsx  navbar.tsx
apps/nextjs-frontend/src/components/mdx/: heading.tsx  markdown.tsx  mdx.tsx  video.tsx
apps/nextjs-frontend/src/contexts/: blogPost.ts
apps/nextjs-frontend/src/fusihub/i18n/: routing.ts
apps/nextjs-frontend/src/fusihub/ui/: blur-image.tsx  code-block.tsx  dialog.tsx  index.ts  link.tsx  marquee.tsx  popover.tsx  scroll-area.tsx  segment-group.tsx  table.tsx  toaster.tsx  tooltip.tsx
apps/nextjs-frontend/src/fusihub/utils/: get-image.ts  index.ts
apps/nextjs-frontend/src/hooks/: use-copy-to-clipboard.ts
apps/nextjs-frontend/src/libs/: constants.ts
apps/nextjs-frontend/src/styles/: globals.css
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/context/: mod.rs
crates/libs/lib-core/src/model/: mod.rs
crates/libs/lib-test/: Cargo.toml
crates/libs/lib-test/src/: client.rs  lib.rs  response.rs
crates/libs/lib-test/tests/: test_base.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/handlers/: handlers_hello.rs  handlers_login.rs  mod.rs
crates/libs/lib-web/src/middlewares/: middlewares_request_stamp.rs  middlewares_response_map.rs  mod.rs
crates/libs/lib-web/src/routes/: routes_static.rs
crates/services/web-backend-server/: Cargo.toml
crates/services/web-backend-server/examples/: quick_dev.rs
crates/services/web-backend-server/src/: config.rs  error.rs  main.rs
crates/services/web-backend-server/src/web/: mod.rs  routes_health.rs  routes_hello.rs  routes_login.rs
docker/: nextjs-frontend-server.Dockerfile  nextjs-frontend-server.dockerignore  nextjs-frontend.Dockerfile  nextjs-frontend.dockerignore  web-backend-server.Dockerfile  web-backend-server.Dockerfile.dockerignore
docker/traefik-local-dev/: .env.example  compose.yml
docker/traefik-local-dev/config/: services.yml  tls.yml  traefik.yml
docs/: structure.md  useful-command.md
libs/lib-utils/: Cargo.toml
libs/lib-web/src/: error.rs  lib.rs
scripts/: nextjs-frontend-server.Dockerfile  nextjs-frontend-server.dockerignore  web-backend-server.Dockerfile  web-backend-server.Dockerfile.dockerignore
services/web-backend-server/: Cargo.toml
services/web-backend-server/src/: main.rs
(+16 files in other folders)
