[workspace.lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-core",
    "crates/libs/lib-web",
    "crates/libs/lib-utils",

    # -- Application Services
    "crates/services/web-backend-server", "crates/libs/lib-test",
]

[workspace.dependencies]
# -- Serde
serde_with = { version = "3.12.0", features = ["time_0_3"] }
# -- Web
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.11.0"
# -- Others
time = { version = "0.3.41", features = ["formatting", "parsing", "serde"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
