[package]
name = "lib-test"
version = "0.1.0"
edition = "2024"

[features]
color-output = ["url", "colored_json", "colored"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["cookies", "json"] }
reqwest_cookie_store = "0.8.0"
cookie = "0.18.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"

[dependencies.colored]
version = "3.0.0"
optional = true

[dependencies.url]
version = "2.5.4"
optional = true

[dependencies.colored_json]
version = "5.0.0"
optional = true

[dev-dependencies]
anyhow = "1.0.97"
