[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
lib-core = { path = "../../libs/lib-core" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

strum_macros = "0.27.1"
derive_more = { workspace = true }
