[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

time = { workspace = true }
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
strum_macros = "0.27.1"
derive_more = { workspace = true }
