[package]
name = "web-backend-server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }
lib-web = { path = "../../libs/lib-web" }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# -- Async
tokio = { version = "1.44.1", features = ["full"] }
axum = { workspace = true }
tower-cookies = { workspace = true }

# -- Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
derive_more = { workspace = true }

[dev-dependencies]
lib-test = { path = "../../libs/lib-test" }
